--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.10",
+    "passport": "^0.7.0",
+    "passport-kakao": "^1.0.1",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
