--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
+    "openai": "^6.8.1",
     "passport": "^0.7.0",
     "passport-kakao": "^1.0.1",
     "pg": "^8.16.3",
